Sat Jul 29 21:57:30 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* ruby.c (rubylib_mangle): provide another buffer for the result.

Wed Jul 26 15:07:00 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (eval): disable interrupts and thread context switching
	  during compilation and execution.

Mon Jul 24 18:52:55 2000  WATANABE Hirofumi  <eban@os.rim.or.jp>

	* win32/win32.c (win32_getenv): should remove `static'.

	* ruby.c (rubylib_mangle): support "/hoge;/foo"

Mon Jul 24 10:28:55 2000  GOTO Kentaro  <gotoken@math.sci.hokudai.ac.jp>

	* string.c (rb_str_count): raise exception if no argument is
	  given.

Sun Jul 23 12:55:04 2000  Dave Thomas  <Dave@Thomases.com>

	* string.c (rb_str_rindex): Support negative end position.

Fri Jul 21 17:35:01 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* process.c (proc_getpriority): getpriority(2) may return valid
	  negative number.  use errno to detect error.

Sat Jul 15 01:32:34 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (Init_eval): should prohibit `include' and
	  `module_function' for class Class.  The latter was very
	  dangerous.

Fri Jul 14 12:49:50 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (argf_eof): need to check stdin, when next_p == -1.

	* io.c (read_all): use io_fread() instead of fread(3).

	* io.c (io_reopen): should clearerr FILE if fd < 3.

	* re.c (rb_reg_match_m): the result is exported, so it should be
	  declared as busy.

	* eval.c (rb_eval): should preserve errinfo even if return, break,
	  etc. is called in rescue clause.

Fri Jul  7 03:30:00 2000  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* numeric.c (fix_aref): convert index by NUM2INT, not FIX2INT. 
	  (ruby-bugs:#PR37)

Mon Jul  3 23:46:56 2000  Katsuyuki Komatsu  <komatsu@sarion.co.jp>

	* win32/win32.c (myselect, myaccept): disable interrupt while
	  executing accept() or select() to avoid Ctrl-C causes
	  "unknown software exception (0xc0000029)".
